fix: update padding on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -38,7 +38,7 @@
         }
 
         @media screen and (max-width: 1280px) and (orientation: portrait) {
-            padding-top: 10rem;
+            padding-top: 5rem;
         }
     }
 
